# seshat

./: .gitignore  main.py  pyproject.toml
data/processed/: The Pragmatic Programmer Your Journey to Mastery.md
src/: __init__.py
src/seshat/: app.py  config.py
src/seshat/chain/: rag_chain.py
src/seshat/ingestion/: chunker.py  pdf_processor.py
src/seshat/retrieval/: embeddings.py  vector_store.py
src/seshat/scripts/: ingest.py
src/seshat/scripts/data/processed/: The Pragmatic Programmer Your Journey to Mastery.md
