[project]
name = "seshat"
version = "0.1.0"
description = "Aplicação para ajudar nos estudos"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Welington Carlos", email = "wcarlos3@gmail.com" },
]
keywords = ["langchain", "rag", "document-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=1.4.0",
    "docling>=2.66.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-voyageai>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "tokenizers>=0.21.0",
    "voyageai>=0.3.2",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/seshat"
Repository = "https://github.com/seu-usuario/seshat.git"
Documentation = "https://github.com/seu-usuario/seshat#readme"

[project.scripts]
# seshat = "seshat.cli:main"  # Descomente se tiver CLI

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seshat"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipython[all]>=9.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "ruff>=0.14.10",
    "mypy>=1.10.0",
]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120
indent-width = 4

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (formatter cuida disso)
]
fixable = ["ALL"]
dummy-variable-rgx = "^_+$"

[tool.ruff.lint.isort]
known-first-party = ["seshat"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/seshat --cov-report=term-missing"
